# hOSt

./: .gitignore  README.md
compiled-binaries/: archive_engine.wasm  crop.wasm  crypto_engine.wasm  csv_engine.wasm  image_filter.wasm  invert.wasm  markdown_engine.wasm  pdf_engine.wasm  resize.wasm  uppercase.wasm
host-daemon/: go.mod  go.sum  main.go  ui_parser.go
wasm-modules/archive_engine/: Cargo.toml
wasm-modules/archive_engine/src/: lib.rs
wasm-modules/crop/: Cargo.toml
wasm-modules/crop/src/: lib.rs
wasm-modules/crypto_engine/: Cargo.toml
wasm-modules/crypto_engine/src/: lib.rs
wasm-modules/csv_engine/: Cargo.toml
wasm-modules/csv_engine/src/: lib.rs
wasm-modules/image-filter/: Cargo.toml
wasm-modules/image-filter/src/: lib.rs
wasm-modules/invert/: Cargo.toml
wasm-modules/invert/src/: lib.rs
wasm-modules/markdown_engine/: Cargo.toml
wasm-modules/markdown_engine/src/: lib.rs
wasm-modules/pdf_engine/: Cargo.toml
wasm-modules/pdf_engine/src/: lib.rs
wasm-modules/resize/: Cargo.toml
wasm-modules/resize/src/: lib.rs
wasm-modules/uppercase/: Cargo.toml
wasm-modules/uppercase/src/: lib.rs
