[package]
name = "crypto_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# We remove 'aead' from features as it is a core dependency, not an optional feature.
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
pbkdf2 = { version = "0.12.2", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }